# deepvac-insight

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  deepvac.spec  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
app/: alarm_history_dialog.py  app.py  chambers_dialog.py  chart_widget.py  common.py  derived_variables_dialog.py  license_activation_window.py  login_window.py  main_window.py  profile_dialog.py  run_tab.py  tab_system.py  test_profiles_dialog.py  title_bar.py
app/model/: model.pt  simulation.py
app/services/: alarms_service.py  annotations_service.py  auth_service.py  backup_service.py  chambers_service.py  data_quality.py  data_service.py  derived_variables_service.py  i18n_service.py  licensing_client.py  log_service.py  opc_broadcast_server.py  safe_eval.py  settings_service.py  tcp_client.py  test_profiles_service.py
app/views/: controller.py  dashboard.py  monitoring.py  opc.py  reports.py  runs.py  simulator.py
data/: deepvac_annotations.sqlite3  deepvac_users.sqlite3
data/backups/deepvac_users/: deepvac_users_20260713_104850_daily.sqlite3
data/reports/: val_1777577798_68967736.html  val_1777579663_b384ac56.html  val_1777579663_b384ac56.xlsx
docs/: testing.md
installer/: README.md  deepvac.iss
resources/i18n/: _translate.py  deepvac_de.qm  deepvac_de.ts  deepvac_es.qm  deepvac_es.ts
scripts/: check_coverage.py  update_simulation_golden.py
tests/: conftest.py
tests/fixtures/runs/valid_run/: band_metrics.csv  run_samples.csv  run_summary.csv
tests/fixtures/simulation/: golden_case_1.json
tests/integration/: test_alarms_service.py  test_chambers_service.py  test_data_dir_isolation.py  test_data_service_cache.py  test_derived_variables_service.py  test_opc_broadcast_server.py  test_report_generation.py  test_simulation_golden.py  test_tcp_client.py  test_test_profiles_service.py
tests/ui/: test_application_startup.py  test_controller_manual_setpoint.py  test_controller_test_profiles.py  test_fixtures_smoke.py  test_login_window.py  test_main_window.py  test_monitoring_alarms.py  test_navigation_smoke.py
tests/unit/: test_environment.py
tests/unit/model/: test_chamber_pid.py  test_codesys_diff.py  test_gru_model.py  test_simulate_candidate.py
tests/unit/services/: test_csv_parsing.py  test_data_quality.py  test_safe_eval.py  test_simulation_glue.py
