[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deepvac-insight"
version = "0.1.0"
description = "Desktop app for reviewing thermal-chamber PID test runs, GRU-based closed-loop simulation, and live chamber monitoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.11.1",
    "pyqtgraph==0.14.0",
    "pandas==2.3.3",
    "numpy==2.2.6",
    "openpyxl==3.1.5",
    "torch==2.12.1",
    "asyncua==2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "ruff",
    "mypy",
    "pre-commit",
    "pip-audit",
    "pyinstaller",
    "pyinstaller-hooks-contrib",
]

[project.scripts]
deepvac-insight = "app.app:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["model/*.pt"]

# Not declared here: resources/ and data/ live at the repo root, outside the
# app/ package, and app/common.py locates them relative to the source tree
# (or, when frozen, relative to the PyInstaller bundle -- see
# common.py/build/deepvac.spec). A `pip install` of this package alone
# will not carry resources/ with it; this pyproject.toml exists to give the
# project real, declared metadata and a console entry point, not to make
# `pip install deepvac-insight` from PyPI a supported distribution path.
# The supported "hand this to a non-developer" path is the PyInstaller
# build in build/deepvac.spec (see README).

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "build",
    "dist",
    "data",
    "resources/i18n/*.py",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
markers = [
    "unit: isolated unit tests",
    "integration: tests using filesystem or temporary databases",
    "ui: PySide6 widget and application smoke tests",
    "slow: tests excluded from the default fast suite",
    "packaging: tests that operate on a frozen application",
]
qt_api = "pyside6"

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "tests/*",
    "resources/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
files = [
    "app/model/simulation.py",
    "app/services/data_service.py",
    "app/services/auth_service.py",
    "app/services/backup_service.py",
    "app/common.py",
]
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = [
    "build/",
    "dist/",
    "data/",
]

# pandas ships no inline types and pandas-stubs is strict enough that
# adopting it project-wide is its own separate effort -- pandas is used
# narrowly in the two files checked here (pd.DataFrame construction/export),
# so a scoped override is more honest than either pretending it's typed or
# disabling import checking globally (see [tool.mypy]'s own
# warn_unused_ignores -- this keeps that meaningful for everything else).
[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true
